--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "author": "Andrew Mead",
   "license": "MIT",
+  "engines": {
+    "yarn": "1.13.0"
+  }
   "scripts": {
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
