--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Andrew Mead",
   "license": "MIT",
   "engines": {
-    "yarn": "1.13.0"
+    "yarn": "1.13.0",
+    "node": "8.15.0"
   },
   "scripts": {
     "build:dev": "webpack",
